microservice_eks_istio_demo/TBD/avenger-destinationrule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: avenger
spec:
  host: avenger-server.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
