microservice_eks_istio_demo/TBD/dashboard-destinationrule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kubernetes-dashboard
spec:
  host: kubernetes-dashboard.kube-system.svc.cluster.local
  trafficPolicy:
    loadBalancer: 
      simple: ROUND_ROBIN
    portLevelSettings: 
    - port: 
        number: 443
      tls: 
        mode: SIMPLE # initiates HTTPS
