microservice_eks_istio_demo/TBD/dashboard-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
    istio.kubernetes.io/ssl-passthrough: "true"
    #nginx.org/ssl-backends: "kubernetes-dashboard"
    kubernetes.io/ingress.allow-http: "false"
    istio.ingress.kubernetes.io/secure-backends: "true"
    istio.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/tls-acme: 'true'
  name: kubernetes-dashboard-ingress
  namespace: kube-system
spec:
  tls:
  - hosts:
    - kubernetes-dashboard.example.cloud
    secretName: kubernetes-dashboard-certs
  rules:
  - host: kubernetes-dashboard.example.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
