microservice_eks_istio_demo/TBD/echoserver.yml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-test
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  namespace: istio-test
  labels:
    app: echo-server
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: echo-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
  namespace: istio-test
spec:
  selector:
    matchLabels:
      app: echo-server
  replicas: 3
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
      - name: echo-server
        image: gcr.io/google-containers/echoserver:1.10
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-server-ingress
  namespace: istio-test
spec:
  rules:
  - http:
      paths:
      - path: /echo-server-istio
        backend:
          serviceName: echo-server
          servicePort: http
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: istio-test
  name: istio-test-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: istio-test
  name: istio-test-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - istio-test-gateway
  http:
  - match:
    - uri:
        prefix: /echo-server-istio
    route:
    - destination:
        host: echo-server
    appendHeaders:
        x-forwarded-proto: "https"
        #x-forwarded-port: "443"
        #x-abc: "test" 
        x-istio-forwarded-proto: "https"
