microservice_eks_istio_demo/TBD/ingress-template.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${ingress_name}
  namespace: ${ingress_namespace}
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: ${scheme_name}
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: ${certificate_arns}
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-path: /login/auth
    alb.ingress.kubernetes.io/success-codes: 200-499
    alb.ingress.kubernetes.io/tags: ${tags}
    alb.ingress.kubernetes.io/subnets: ${subnets}
spec:
  rules:
  - http:
      paths:
      - path: 
        backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
  - http:
      paths:
      - path: 
        backend:
          serviceName: istio-ingressgateway
          servicePort: 80
